force-app/main/default/objects/Referrals__c/fields/Date_of_Result_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Result_Sent__c</fullName>
    <label>Date of Result Sent</label>
    <type>DateTime</type>
</CustomField>