force-app/main/default/objects/Referrals__c/fields/Date_of_Sample_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Sample_Received__c</fullName>
    <label>Date of Sample Received</label>
    <type>DateTime</type>
</CustomField>