force-app/main/default/objects/Referrals__c/fields/Medical_Test__c.field-meta.xml
<CustomField>
    <fullName>Medical_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medical Test</label>
    <referenceTo>Medical_Test__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>