force-app/main/default/objects/Referrals__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Medical_Test__c</columns>
    <columns>Mobile__c</columns>
    <columns>Patient_Name__c</columns>
    <columns>Test_Date__c</columns>
    <columns>Price__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>